Fixed Phone app graphic not showing and working on desktop versions of the webapp

--- a/app/globals.css
+++ b/app/globals.css
@@ -66,6 +66,8 @@
   sm:justify-center
   sm:align-middle
   sm:bg-contain
+  md:bg-cover
+  md:bg-center
 }
 
 .hero-car-wrapper{
@@ -196,7 +198,10 @@
   text-white
   content-center
   align-middle
+}
 
+.graphic{
+  @apply w-full md:w-1/2;
 }
 
 .nav-bar{
@@ -216,12 +221,11 @@
 }
 .app-graphic-wrapper{
   @apply
-  xs:px-6
-  xs:h-2/3
+  px-6
+  h-2/3
   sm:px-10
   sm:py-12
   sm:mt-12
-
 }
 .app-graphic{
   @apply
